--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you<h1>
     <a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+    <h2>Your personal travel guide<h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
 
   </body>
 </html>
