Add video and finish styling

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you<h1>
     <a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+    <p><video autoplay loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4" alt="playing on phone"></video></p>
     <h2>Your personal travel guide<h2>
-    <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
-
+    <p class="description">Excursion remembers places you like, and
+     recommends new points of interest around you</p>
+    <p class="camp"><img src="resources/images/camp.jpg" alt="camp"></p>
+    <p class="phone"><img src="resources/images/phone.png" alt="phone"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
   </body>
 </html>
