--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you<h1>
-    <a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+    <p><a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
     <p><video autoplay loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4" alt="playing on phone"></video></p>
     <h2>Your personal travel guide<h2>
@@ -15,6 +15,7 @@
     <p class="camp"><img src="resources/images/camp.jpg" alt="camp"></p>
     <p class="phone"><img src="resources/images/phone.png" alt="phone"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a>
+    <p><a href="https://bgnbae6dntuh0v1msmgmgite0s6gtprs4k7cqgvk891pgbispceg.codecademy.cloud/#">Download Excursion (Coming Soon!)</a></p>
+    <footer>&copy; Excursion<footer>
   </body>
 </html>
